@@ -13,6 +13,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (5.1-dev, SVN trunk):
 -------------------------------------
 
+- Throw an exception if the WCS request does not overlap layer (#2503)
+
 - Acquire TLOCK_PROJ for pj_transform() calls (#2533).
 
 - Fixed problem with large imagemaps generating no output (#2526)
